Skip to content

Support vorbis in avi

VLC currently doesn't support vorbis audio tracks in avi. When simply mapping the id's to the vorbis decoder, VLC complains about broken headers and doesn't play. Who knows information on how this is muxed into avi?

#define WAVE_FORMAT_VORB_1              0x674f
#define WAVE_FORMAT_VORB_1PLUS          0x676f 
#define WAVE_FORMAT_VORB_2              0x6750
#define WAVE_FORMAT_VORB_2PLUS          0x6770
#define WAVE_FORMAT_VORB_3              0x6751
#define WAVE_FORMAT_VORB_3PLUS          0x6771

0xfffe is sometimes used for this as well, but is also used for the WAVEFORMAT_EXT, so should be avoided.

17:57 <@alexnoe> the private data in strf contains the 3 init packetss
17:57 <@alexnoe> -s
17:57 <@alexnoe> the size is stored as big_endian_16
17:57 -!- nexus3 [john@cc-E05DF16C.nefkom.net] has quit [Connection reset by 
          peer]
17:58 -!- CruNcher [lulu_lol@cc-D1B4E884.arcor-ip.net] has joined #matroska
18:01 <@alexnoe> the rest is raw
Edited by hartman
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information