* Define a couple of dummy 4cc's for vorbis in avi streams (vor1,vo1+,vor2,vo2+,vor3,vo3+).   We cannot handle these formats but at least we will be able to recognize bugreports from this now. refs #224   B.T.W. the ticket DOES contain some info on these formats. Someone who know ogg/vorbis can probably implement support for this with this information.